[package]
name = "randmockery"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
build = "build.rs"

[dependencies]
# NOTE we'll use the git versoin
nix = { git = "https://github.com/nix-rust/nix" } # need struct Pid
spawn-ptrace = "0.*"
rand = "0.*"
enum_extract = { git = "https://github.com/marmistrz/enum_extract" } # need trailing comma bugfix
libc = { git = "https://github.com/rust-lang/libc" } # need syscall table
