[package]
name = "randmockery"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
build = "build.rs"

[dependencies]
# NOTE we'll use the git versoin
nix = { git = "https://github.com/nix-rust/nix" } # need struct Pid
rand = "0.*"
enum_extract = "0.1.1"
libc = { git = "https://github.com/rust-lang/libc" } # need syscall table
libloading = "*"
clap = "2"
