[package]
name = "randmockery"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]
build = "build.rs"

[dependencies]
# although 0.9.0 has been released, we'll want to test with the nix upstreaming
nix = { git = "https://github.com/nix-rust/nix" }
rand = "0.3"
enum_extract = "0.1.1"
libc = "0.2.28"
libloading = "0.4"
clap = "2"

[dev-dependencies]
lazy_static = "0.2.8"
